[package]
name = "risein-payment"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = "21.7.3"

[dev_dependencies]
soroban-sdk = { version = "21.7.3", features = ["testutils"] }

[profile.dev]
opt-level = 1
[features]
testutils = ["soroban-sdk/testutils"]

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true



[workspace.dependencies]
soroban-sdk = "21.7.3"
